<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/accountFragment"
            android:icon="@drawable/account"
            android:title="@string/account" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/mySportsFragment"
            android:icon="@drawable/my_sports"
            android:title="@string/my_sports" />
    </group>
    <group>
        <item
            android:id="@+id/listsFragment"
            android:icon="@drawable/list"
            android:title="@string/lists" />
    </group>
    <group>
        <item
            android:id="@+id/settingsAndPrivacyFragment"
            android:icon="@drawable/settings_and_privacy"
            android:title="@string/settings_and_privacy" />
        <item
            android:id="@+id/helpCentreFragment"
            android:icon="@drawable/help_centre"
            android:title="@string/help_centre" />
    </group>
</menu>


















